--- a/package.json
+++ b/package.json
@@ -9,19 +9,14 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.0",
     "apollo-boost": "^0.1.7",
     "apollo-link": "^1.2.2",
     "apollo-upload-client": "^8.0.0",
-    "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
     "graphql-tag": "^2.9.2",
-    "gulp-babel": "^7.0.0",
     "gulp-nodemon": "^2.2.1",
     "immutable": "^3.8.2",
     "jest": "^21.2.1",
@@ -39,11 +34,16 @@
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "apollo-server-express": "^2.0.0-rc.8",
-    "bcrypt": "^2.0.1",
     "async": "^2.6.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.0",
     "css-loader": "^1.0.0",
@@ -58,6 +58,7 @@
     "graphql": "^0.13.2",
     "graphql-upload": "^8.0.0",
     "gulp": "4",
+    "gulp-babel": "^8.0.0",
     "html-webpack-plugin": "^4.0.0-beta.1",
     "mini-css-extract-plugin": "^0.4.2",
     "multer": "^1.4.1",
