--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.0.0-rc.8",
-    "bcrypt": "^2.0.1",
     "async": "^2.6.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.0",
     "css-loader": "^1.0.0",
@@ -60,6 +60,7 @@
     "gulp": "4",
     "html-webpack-plugin": "^4.0.0-beta.1",
     "mini-css-extract-plugin": "^0.4.2",
+    "mongoose": "^5.3.16",
     "multer": "^1.4.1",
     "nanoid": "^2.0.0",
     "query-string": "^6.2.0",
