--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.0.0-rc.8",
-    "bcrypt": "^2.0.1",
     "async": "^2.6.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.0",
     "css-loader": "^1.0.0",
@@ -67,6 +67,7 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
+    "upload-cloud-storage": "^1.0.4",
     "validator": "^9.4.1",
     "webpack-dev-server": "^3.1.8",
     "webpack-manifest-plugin": "^2.0.4"
