update react config

--- a/package.json
+++ b/package.json
@@ -12,16 +12,8 @@
     "apollo-boost": "^0.1.7",
     "apollo-link": "^1.2.2",
     "apollo-upload-client": "^8.0.0",
-    "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
     "graphql-tag": "^2.9.2",
-    "gulp-babel": "^7.0.0",
     "gulp-nodemon": "^2.2.1",
     "immutable": "^3.8.2",
     "jest": "^21.2.1",
@@ -29,20 +21,25 @@
     "node-sass": "^4.9.0",
     "react": "^16.6.2",
     "react-apollo": "^2.1.4",
-    "react-hot-loader": "^4.3.1",
     "react-router-dom": "^4.2.2",
     "sass-loader": "^7.0.1",
     "serve-static": "^1.13.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.18.0",
     "webpack-stream": "^5.1.1",
     "whatwg-fetch": "^2.0.3"
   },
   "dependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "apollo-server-express": "^2.0.0-rc.8",
     "async": "^2.6.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.0",
@@ -58,6 +55,7 @@
     "graphql": "^0.13.2",
     "graphql-upload": "^8.0.0",
     "gulp": "4",
+    "gulp-babel": "^8.0.0",
     "html-webpack-plugin": "^4.0.0-beta.1",
     "mini-css-extract-plugin": "^0.4.2",
     "mongoose": "^5.3.16",
@@ -65,11 +63,13 @@
     "nanoid": "^2.0.0",
     "query-string": "^6.2.0",
     "react-dom": "^16.6.2",
+    "react-hot-loader": "^4.8.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "upload-cloud-storage": "^1.0.4",
     "validator": "^9.4.1",
+    "webpack": "^4.29.6",
     "webpack-dev-server": "^3.1.8",
     "webpack-manifest-plugin": "^2.0.4"
   },
