--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,18 @@
 {
-	"presets": ["env", "react"],
+	"presets": [
+		[
+			"@babel/preset-env",
+			{
+				// "useBuiltIns": "entry"
+				// "modules": false
+			}
+		],
+		"@babel/preset-react"
+	],
 	"plugins": [
-		"transform-class-properties",
-        "transform-object-rest-spread",
+		"@babel/plugin-syntax-dynamic-import",
+		"@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-object-rest-spread",
         "react-hot-loader/babel"
 	]
 }
