--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 
-
 # database
 DB_DEFAULT_HOST=localhost
 DB_DEFAULT_PORT=27017
@@ -13,8 +12,7 @@ REDIS_PORT=6379
 REDIS_PASS=
 REDIS_PREFIX=styless::
 
-LOG_DIR=./logs
+LOG_DIR=./log
 
 NODE_HOST=localhost
-NODE_PORT=3000
 SECRET=change your secret
