--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
+    "config": "^3.1.0",
     "connect-redis": "^3.4.0",
     "css-loader": "^1.0.0",
     "del": "^3.0.0",
@@ -57,6 +58,7 @@
     "gulp": "4",
     "gulp-babel": "^8.0.0",
     "html-webpack-plugin": "^4.0.0-beta.1",
+    "i18n": "^0.8.3",
     "mini-css-extract-plugin": "^0.4.2",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
@@ -71,7 +73,8 @@
     "validator": "^9.4.1",
     "webpack": "^4.29.6",
     "webpack-dev-server": "^3.1.8",
-    "webpack-manifest-plugin": "^2.0.4"
+    "webpack-manifest-plugin": "^2.0.4",
+    "winston": "^3.2.1"
   },
   "repository": {
     "type": "git",
