--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "basic framework which allow you to write code in your styles",
   "main": "index.js",
   "scripts": {
-    "local": "NODE_ENV=local gulp build",
+    "dev": "NODE_ENV=development gulp build",
     "build": "gulp build",
     "test": "jest"
   },
@@ -42,6 +42,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
+    "colors": "^1.3.3",
     "config": "^3.1.0",
     "connect-redis": "^3.4.0",
     "css-loader": "^1.0.0",
