--- a/.babelrc
+++ b/.babelrc
@@ -13,6 +13,14 @@
 		"@babel/plugin-syntax-dynamic-import",
 		"@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-object-rest-spread",
-        "react-hot-loader/babel"
+		"react-hot-loader/babel",
+		[
+			"import",
+			{
+				"libraryName": "antd",
+				"libraryDirectory": "es",
+				"style": "css"
+			}
+		]
 	]
 }
