--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "antd": "^3.16.2",
     "apollo-server-express": "^2.0.0-rc.8",
     "async": "^2.6.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.11.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
@@ -60,6 +62,8 @@
     "gulp-babel": "^8.0.0",
     "html-webpack-plugin": "^4.0.0-beta.1",
     "i18n": "^0.8.3",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.2",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
