--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "gulp-nodemon": "^2.2.1",
     "immutable": "^3.8.2",
     "jest": "^21.2.1",
-    "md5": "^2.2.1",
     "node-sass": "^4.9.0",
     "react": "^16.6.2",
     "react-apollo": "^2.1.4",
@@ -68,6 +67,8 @@
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
     "nanoid": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "query-string": "^6.2.0",
     "react-dom": "^16.6.2",
     "react-hot-loader": "^4.8.2",
