change config env, off auth

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 
 # database
-DB_DEFAULT_HOST=localhost
+DB_DEFAULT_HOST=mongo
 DB_DEFAULT_PORT=27017
 DB_DEFAULT_NAME=styless
 DB_DEFAULT_USER=
 DB_DEFAULT_PASS=
 
 # redis
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASS=
 REDIS_PREFIX=styless::
