--- a/.babelrc
+++ b/.babelrc
@@ -6,21 +6,10 @@
 				// "useBuiltIns": "entry"
 				// "modules": false
 			}
-		],
-		"@babel/preset-react"
+		]
 	],
 	"plugins": [
-		"@babel/plugin-syntax-dynamic-import",
 		"@babel/plugin-proposal-class-properties",
-        "@babel/plugin-proposal-object-rest-spread",
-		"react-hot-loader/babel",
-		[
-			"import",
-			{
-				"libraryName": "antd",
-				"libraryDirectory": "es",
-				"style": "css"
-			}
-		]
+        "@babel/plugin-proposal-object-rest-spread"
 	]
 }
