--- a/package.json
+++ b/package.json
@@ -9,78 +9,43 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "apollo-boost": "^0.1.7",
-    "apollo-link": "^1.2.2",
-    "apollo-upload-client": "^8.0.0",
-    "babel-jest": "^21.2.0",
-    "graphql-tag": "^2.9.2",
+    "babel-jest": "^24.8.0",
     "gulp-nodemon": "^2.2.1",
-    "immutable": "^3.8.2",
-    "jest": "^21.2.1",
-    "node-sass": "^4.9.0",
-    "react": "^16.6.2",
-    "react-apollo": "^2.1.4",
-    "react-router-dom": "^4.2.2",
-    "sass-loader": "^7.0.1",
-    "serve-static": "^1.13.1",
-    "style-loader": "^0.21.0",
-    "webpack-stream": "^5.1.1",
-    "whatwg-fetch": "^2.0.3"
+    "jest": "^24.8.0"
   },
   "dependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "antd": "^3.16.2",
-    "apollo-server-express": "^2.0.0-rc.8",
     "async": "^2.6.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-import": "^1.11.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "bcrypt": "^2.0.1",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.2",
     "colors": "^1.3.3",
     "config": "^3.1.0",
     "connect-redis": "^3.4.0",
-    "css-loader": "^1.0.0",
-    "del": "^3.0.0",
+    "del": "^4.1.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "faker": "^4.1.0",
-    "file-loader": "^2.0.0",
     "graphql": "^0.13.2",
-    "graphql-upload": "^8.0.0",
+    "graphql-tag": "^2.10.1",
     "gulp": "4",
     "gulp-babel": "^8.0.0",
-    "html-webpack-plugin": "^4.0.0-beta.1",
+    "gulp-watch": "^5.0.1",
     "i18n": "^0.8.3",
-    "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.2",
+    "immutable": "^3.8.2",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
     "nanoid": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "query-string": "^6.2.0",
-    "react-dom": "^16.6.2",
-    "react-hot-loader": "^4.8.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "upload-cloud-storage": "^1.0.4",
     "validator": "^9.4.1",
-    "webpack": "^4.29.6",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-manifest-plugin": "^2.0.4",
     "winston": "^3.2.1"
   },
   "repository": {
