--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "basic framework which allow you to write code in your styles",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development gulp build",
-    "build": "gulp build",
+    "dev": "NODE_ENV=development gulp",
+    "build": "gulp",
     "test": "jest"
   },
   "devDependencies": {
@@ -19,6 +19,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@types/config": "^0.0.34",
     "async": "^2.6.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^3.0.6",
@@ -35,7 +36,8 @@
     "graphql-tag": "^2.10.1",
     "gulp": "4",
     "gulp-babel": "^8.0.0",
-    "gulp-watch": "^5.0.1",
+    "gulp-tslint": "^8.1.4",
+    "gulp-typescript": "^5.0.1",
     "i18n": "^0.8.3",
     "immutable": "^3.8.2",
     "mongoose": "^5.3.16",
@@ -45,6 +47,8 @@
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.2",
     "validator": "^9.4.1",
     "winston": "^3.2.1"
   },
