--- a/package.json
+++ b/package.json
@@ -6,22 +6,16 @@
   "scripts": {
     "dev": "NODE_ENV=development gulp",
     "build": "gulp",
+    "start": "node ./build",
     "test": "jest"
   },
   "devDependencies": {
-    "babel-jest": "^24.8.0",
     "gulp-nodemon": "^2.2.1",
     "jest": "^24.8.0"
   },
   "dependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
     "@types/config": "^0.0.34",
     "async": "^2.6.1",
-    "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.2",
     "colors": "^1.3.3",
@@ -35,7 +29,6 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.1",
     "gulp": "4",
-    "gulp-babel": "^8.0.0",
     "gulp-tslint": "^8.1.4",
     "gulp-typescript": "^5.0.1",
     "i18n": "^0.8.3",
