update: add test typescripte, update all source

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 NODE_ENV=development
 
 # database
+DB_DEFAULT_SCHEME=mongodb
 DB_DEFAULT_HOST=mongo
 DB_DEFAULT_PORT=27017
 DB_DEFAULT_NAME=styless
@@ -16,5 +17,5 @@ REDIS_PREFIX=styless::
 
 LOG_DIR=./log
 
-NODE_HOST=localhost
+NODE_HOST=0.0.0.0
 SECRET=change your secret
