--- a/package.json
+++ b/package.json
@@ -7,14 +7,28 @@
     "dev": "NODE_ENV=development gulp",
     "build": "gulp",
     "start": "node ./build",
-    "test": "jest"
+    "test": "ts-mocha --paths -p tsconfig.json src/test/**/*.test.ts"
   },
+  "_moduleAliases": {},
+  "_moduleDirectories": [
+    "build"
+  ],
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
     "gulp-nodemon": "^2.2.1",
-    "jest": "^24.8.0"
+    "ts-mocha": "^6.0.0"
   },
   "dependencies": {
+    "@types/babel__core": "^7.1.2",
+    "@types/babel__template": "^7.0.2",
     "@types/config": "^0.0.34",
+    "@types/i18n": "^0.8.5",
+    "@types/mongoose": "^5.5.7",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
+    "@types/redis": "^2.8.13",
     "async": "^2.6.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.2",
@@ -29,10 +43,11 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.1",
     "gulp": "4",
-    "gulp-tslint": "^8.1.4",
     "gulp-typescript": "^5.0.1",
     "i18n": "^0.8.3",
     "immutable": "^3.8.2",
+    "mocha": "^6.1.4",
+    "module-alias": "^2.2.0",
     "mongoose": "^5.3.16",
     "multer": "^1.4.1",
     "nanoid": "^2.0.0",
@@ -40,7 +55,6 @@
     "passport-local": "^1.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "tslint": "^5.18.0",
     "typescript": "^3.5.2",
     "validator": "^9.4.1",
     "winston": "^3.2.1"
